A few more updates

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,12 @@
 
     <h1>Hello</h1>
 
+    <button onclick="googleLogin()">
+      Google Login
+    </button>
+
+    <input onchange="updatePost()">
+
     <script src="app.js">
 
     </script>
